# pictr

./: .env.example  .gitignore  LICENSE  Makefile  README.md  SECURITY.md  pyproject.toml
backend/app/: agent.py  config.py  image_client.py  llm_client.py  main.py  models.py  store.py  tools.py
backend/tests/: conftest.py  test_firestore_store.py  test_health.py  test_image_client.py  test_planning.py  test_sessions.py  test_workflow.py
frontend/: .env.example  package-lock.json
frontend/src/: App.tsx  api.ts  styles.css  types.ts
frontend/src/components/: BriefForm.tsx  PlanSummary.tsx  PlanningPanel.tsx  SessionControls.tsx  ShotCard.tsx  ShotList.tsx  StoryboardGrid.tsx  Toast.tsx
